<resources>
    <string name="app_name">GCP</string>
    <string name="login">Login</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_phone">Phone Number</string>
    <string name="hint_password">Password</string>
    <string name="password_error">Please enter the password</string>
    <string name="forgot_password"><u>Forgot your password?</u></string>
    <string name="skip">Skip</string>
    <string name="skip_underline"><u>Skip</u></string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="send_otp">Send OTP</string>
    <string name="welcome">Welcome</string>
    <string name="track_your_order">Track your order</string>
    <string name="please_enter_your_registered_details">Please enter your registered details</string>
    <string name="our_other_products_services"><u>Our other products/services</u></string>
    <string name="no_record_found">No Record Found.</string>
    <string name="splash_logo">Splash Logo</string>
    <string name="forgot_password_label">Forgot your password</string>
    <string name="enter_registered_email_to_receive_link">Enter enter your registered email below to receive your password reset link.</string>
    <string name="enter_registered_phone_number_for_otp">Enter your phone number below to receive your OTP.</string>
    <string name="request_reset_link">Request reset link</string>
    <string name="back_to_login">Back to login</string>
    <string name="back_to_login_u"><u>Back to login</u></string>
    <string name="please_enter_your_tracking_number">Please enter your tracking number</string>
    <string name="enter_your_tracking_number">Enter your tracking number</string>
    <string name="track_order">Track Order</string>
    <string name="track_number_error">Please enter the tracking number</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="by_clicking_register_button_you_agree">By clicking on Register button, you are agreed to our</string>
    <string name="terms_and_condition">terms &amp; conditions</string>
    <string name="privacy_policy">privacy policy.</string>
    <string name="by_clicking_on_register_button_text">By clicking on Register button, you are agreed to our terms &amp; conditions and privacy policy.</string>
    <string name="enter_valid_first_name">Enter valid first name</string>
    <string name="validation_last_name">Enter valid last name</string>
    <string name="validation_empty_address">Please enter address</string>
    <string name="validation_empty_village">Please enter village name</string>
    <string name="validation_empty_district">Please select district</string>
    <string name="validation_empty_state">Please select state</string>
    <string name="validation_empty_pincode">Please enter pincode</string>
    <string name="validation_empty_education_qualification">Please enter highest education qualification</string>
    <string name="validation_empty_dob">Please select date of birth</string>
    <string name="validation_empty_occupation">Please enter occupation</string>
    <string name="validation_empty_how_you_hear_about_us">Please enter how did you hear about us</string>
    <string name="validation_empty_member_of_app">Please select member type</string>
    <string name="enter_valid_email">Enter valid email</string>
    <string name="enter_valid_phone">Enter valid phone number</string>
    <string name="enter_password">Enter password</string>
    <string name="enter_confirm_password">Enter confirm password</string>
    <string name="enter_valid_password">Password must be minimum 8 characters .</string>
    <string name="password_confirm_password_does_not_match">Password and Confirm password does not match</string>
    <string name="new_password_confirm_password_does_not_match">New password and Confirm password does not match</string>
    <string name="language">Language</string>
    <string name="marathi">मराठी</string>
    <string name="english">English</string>
    <string name="hindi">हिन्दी</string>
    <string name="next">Next</string>
    <string name="category_icon">Category Icon</string>
    <string name="bulletins">Bulletins</string>
    <string name="courses">Courses</string>
    <string name="jobs">Jobs</string>
    <string name="business_idea">Business Idea</string>
    <string name="alumni">Alumni</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="wishlist">Wishlist</string>
    <string name="settings">Settings</string>
    <string name="explore_courses">Explore Courses</string>
    <string name="business_idea_image">Business Idea Image</string>
    <string name="transparent_image">Transparent Image</string>
    <string name="submit">Submit</string>
    <string name="jobs_posted">Jobs Posted</string>
    <string name="slider_image">Slider Image</string>
    <string name="course_icon">Course Icon</string>
    <string name="number_modules">%d Modules</string>
    <string name="bulletin_image">Bulletin Image</string>
    <string name="interviewer_image">Interviewer Image</string>
    <string name="apply">Apply</string>
    <string name="tips_and_tricks">Tips &amp; Tricks</string>
    <string name="see_more">See More</string>
    <string name="see_all">See All</string>
    <string name="close_icon">Close Icon</string>
    <string name="business_title">Business Title</string>
    <string name="describe_your_business_idea">Describe your business idea</string>
    <string name="describe_your_story">Describe your story</string>
    <string name="course_image">Course Image</string>
    <string name="enroll">Enroll</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="about_us">About Us</string>
    <string name="app_version">App Version</string>
    <string name="our_team">Our Team</string>
    <string name="get_in_touch">Get in Touch</string>
    <string name="tips_tricks">Tips &amp; Tricks</string>
    <string name="sources">Sources:</string>
    <string name="experience">Experience</string>
    <string name="employment">Employment</string>
    <string name="salary">Salary</string>
    <string name="trial_period">Trial Period</string>
    <string name="job_description">Job Description</string>
    <string name="interviewer">Interviewer</string>
    <string name="hint_middle_name">Middle Name(Optional)</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_mobile_number">Mobile Number</string>
    <string name="hint_address">Address</string>
    <string name="hint_village_name">Village Name</string>
    <string name="hint_district">District</string>
    <string name="hint_state">State</string>
    <string name="hint_pincode">Pincode</string>
    <string name="hint_highest_education_qualification">Highest Education Qualification</string>
    <string name="hint_date_of_birth">Date of Birth</string>
    <string name="hint_occupation">Occupation</string>
    <string name="hint_how_did_you_hear_about_us">How did you hear about us</string>
    <string name="are_you_member_of_jeewan_jyoti_s">Are you member of GCP?</string>
    <string name="shg">SHG</string>
    <string name="trainee">Trainee</string>
    <string name="current_student">Current Student</string>
    <string name="none_of_the_above">None of the Above</string>
    <string name="save">Save</string>
    <string name="hint_old_password">Old Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_re_enter_password">Re-enter Password</string>
    <string name="hint_name">Name</string>
    <string name="phone">Phone</string>
    <string name="hint_message">Message</string>
    <string name="coming_soon">Coming soon</string>
    <string name="about">About</string>
    <string name="resources">Resources</string>
    <string name="syllabus">Syllabus</string>
    <string name="hint_title">Title</string>
    <string name="choose_file">Choose File</string>
    <string name="add_story">Add Story</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout ?</string>
    <string name="str_no">No</string>
    <string name="str_yes">Yes</string>
    <string name="no_network_available">No network available</string>
    <string name="push_notification_channel_title">Push Notification about GCP</string>
    <string name="media_url_mp4">https://storage.googleapis.com/exoplayer-test-media-0/BigBuckBunny_320x180.mp4</string>
    <string name="select">Select</string>
    <string name="move_along_guest_user">Move along as Guest User</string>
    <string name="dashboard">Dashboard</string>
    <string name="need_permission">Need permission</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="this_app_requires_camera_permission_to_continue">This app requires Camera permission to access some features</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="choose_via">Choose via</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="allow_permission_to_use_this_feature">Allow permission to use this feature</string>
    <string name="search_here">Search here..</string>
    <string name="select_state">Select State</string>
    <string name="please_select_state">Please select State</string>
    <string name="select_district">Select District</string>
    <string name="get_started">Get Started!</string>
    <string name="view_indicator">View Indicator</string>
    <string name="login_failed">Login Failed</string>
    <string name="fb_login_failed">Some thing went wrong from Facebook, Try normal login</string>
    <string name="google_login_failed">Some thing went wrong from Google, Try normal login</string>
    <string name="or_continue_with">or continue with</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">John Doe</string>
    <string name="nav_header_subtitle">john_doe@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_search">Search</string>
    <string name="action_filter">Filter</string>
    <string name="menu_orders">Orders</string>
    <string name="menu_track_your_order">Track your order</string>
    <string name="menu_faqs">FAQs</string>
    <string name="menu_change_password">Change Password</string>
    <string name="menu_logout">Logout</string>
    <string name="no_data_found">No data found.</string>
    <string name="order">Order#&#160;</string>
    <string name="tracking">Tracking#&#160;</string>
    <string name="order_date">03 - jan - 20226</string>
    <string name="pending...">Pending...</string>
    <string name="order_name">Excel Inc. | Mr. John Doe</string>
    <string name="press_again">Press once again to exit!</string>
    <string name="order_status">Order Status</string>
    <string name="comment">Comment</string>
    <string name="order_status_update">Order Status Update</string>
    <string name="order_detail">Order Detail</string>
    <string name="customer_details">Customer Details</string>
    <string name="product_details">Product Details</string>
    <string name="additional_details">Additional Details</string>
    <string name="po_number">PO Number</string>
    <string name="po_date">PO Date</string>
    <string name="download"><u>Download</u></string>
</resources>