<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_orders"
            android:icon="@drawable/ic_orders"
            android:title="@string/menu_orders" />
        <item
            android:id="@+id/nav_customers"
            android:icon="@drawable/ic_customer"
            android:title="@string/menu_customers" />
        <item
            android:id="@+id/nav_order_tracking"
            android:icon="@drawable/ic_order_tracking"
            android:title="@string/menu_track_your_order" />
        <item
            android:id="@+id/nav_change_password"
            android:icon="@drawable/ic_change_password"
            android:title="@string/menu_change_password" />
        <item
            android:id="@+id/nav_faqs"
            android:icon="@drawable/ic_faqs"
            android:title="@string/menu_faqs" />
    </group>
</menu>