<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:paddingStart="@dimen/fragment_horizontal_padding"
        android:paddingEnd="@dimen/fragment_horizontal_padding"
        tools:context=".ui.fragments.LoginFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/empty_space"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/back_margin_for_full_screen"
            android:padding="@dimen/_10sdp"
            app:srcCompat="@drawable/ic_splash_logo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_label_login"
            style="@style/TextViewPrimaryHugeStyleHeader"
            android:text="@string/login"
            android:textColor="@color/colorGreen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/empty_space" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_email"
            style="@style/InputTextLayoutStyle"
            android:layout_marginTop="@dimen/huge_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_label_login">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_email"
                style="@style/TextInputEditBoxStyle"
                android:drawableEnd="@drawable/ic_email"
                android:drawablePadding="@dimen/normal_size"
                android:hint="@string/hint_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLength="@integer/max_email_length"
                tools:text="test@gmail.com" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_password"
            style="@style/InputTextLayoutStyle"
            android:layout_marginTop="@dimen/huge_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ti_email"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorGray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tie_password"
                style="@style/TextInputEditBoxStyle"
                android:hint="@string/hint_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="@integer/max_password"
                tools:text="Letsdoit@123" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_forgot_password"
            style="@style/TextViewPrimaryStyle"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/large_size"
            android:background="?attr/selectableItemBackground"
            android:onClick="@{clickListener::onClick}"
            android:text="@string/forgot_password"
            android:textColor="@color/colorGreen"
            android:textSize="@dimen/text_size_medium"
            app:fontFamily="@font/gotham_bold_italic"
            app:layout_constraintEnd_toEndOf="@+id/ti_password"
            app:layout_constraintTop_toBottomOf="@+id/ti_password" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            style="@style/LoginButtonStyle"
            android:onClick="@{clickListener::onClick}"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_register"
            style="@style/TextViewPrimaryStyle"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/large_size"
            android:layout_marginBottom="@dimen/mediator_size"
            android:text="@string/don_t_have_an_account_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>