<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        tools:context=".ui.activities.ChangePasswordActivity">

        <include
            android:id="@+id/toolbar_change_password"
            layout="@layout/toolbar_main"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:padding="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_change_password">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_old_password"
                style="@style/InputTextLayoutStyle"
                android:layout_marginTop="@dimen/regular_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorGray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_old_password"
                    style="@style/TextInputEditBoxStyle"
                    android:hint="@string/hint_old_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLength="@integer/max_password"
                    tools:text="Letsdoit@123" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_new_password"
                style="@style/InputTextLayoutStyle"
                android:layout_marginTop="@dimen/regular_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ti_old_password"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorGray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_new_password"
                    style="@style/TextInputEditBoxStyle"
                    android:hint="@string/hint_new_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:maxLength="@integer/max_password"
                    tools:text="Letsdoit@123" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ti_reenter_password"
                style="@style/InputTextLayoutStyle"
                android:layout_marginTop="@dimen/regular_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ti_new_password"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorGray">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_confirm_password"
                    style="@style/TextInputEditBoxStyle"
                    android:hint="@string/hint_re_enter_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLength="@integer/max_password"
                    tools:text="Letsdoit@123" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_change_password"
                style="@style/PrimaryColorButton"
                android:layout_marginBottom="@dimen/small_size"
                android:text="@string/change_password"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>